--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -20,7 +20,7 @@ body {
     }
     section h2,section h3{
       color:#062da1;
-      padding: 15px;
+      padding: 15px 0px;
 
     }
     h2 span,h3 span{
@@ -361,6 +361,7 @@ p.speech {
 .sidebar li{
   list-style: none;
   padding: 8px;
+  text-align: left;
 }
 .sidebar li a{
   text-decoration: none;
