--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -9,6 +9,10 @@ body,html {
     color:#000; 
     overflow-x: hidden !important;
     }
+    NavLink {
+      cursor: pointer;
+    }
+
     .navbar-nav .nav-link.active{
       color: #801717 !important;
     }
@@ -27,8 +31,11 @@ body,html {
       padding: 15px 0px;
 
     }
-    h2 span,h3 span{
+    h2 span,h3 span,.text-color{
       color: rgb(135, 8, 8);
+    }
+    .text-color:hover {
+      color: rgb(191 53 16);
     }
   a {
     text-decoration: none !important;
@@ -108,6 +115,12 @@ nav .nav-item{
 #topfooter ul li:hover{
    color:rgb(247, 199, 6);
 } 
+#topfooter .col2{
+   columns: 2 auto;
+  }
+  .ms-n15{
+    margin-left: -15px;
+  }
 #BannerImage img{
     width:100%;
     height:360px;
@@ -206,9 +219,11 @@ color: rgb(135, 8, 8);
     box-shadow: 1px 1px 8px 0px;
     border-radius: 20px;
 }
-.testimonial .container {
+.testimonial .container 
+{
     columns: 3 auto;
   }
+  
   .testimonial .test{
     width: 100%;
     height:320px;
